FIXED: [ 372231 ] Added KDE's service actions again to right-click popup menu

BUG: 372231

KFileItemActions::addServiceActionsTo() is not deprecated so we should continue using it like before.